fixed statitic, added logging